[tool.poetry]
name = 'combotsha'
version = '0.1.0'
description = 'An IRC bot to notify of new commits'
authors = ['Jérémie Galarneau <jeremie.galarneau@gmail.com>']

[tool.poetry.dependencies]
python = '^3.6'
gitpython = '^3.1.3'

[tool.poetry.dev-dependencies]
pytest = '^5.2'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.poetry.scripts]
combotsha = 'combotsha.combotsha:main'
