[tool.poetry]
name = 'combotsha'
version = '0.1.0'
description = 'An IRC bot to notify of new commits'
authors = ['Jérémie Galarneau <jeremie.galarneau@gmail.com>']
repository = 'https://github.com/jgalar/combotsha/'

[tool.poetry.dependencies]
python = '^3.6'
gitpython = '^3.1.3'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.poetry.scripts]
combotsha = 'combotsha.combotsha:main'
